<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/input_hour"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="end"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/white"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/input_minute"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="end"
            android:inputType="number"
            android:text="@string/_30"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/min"
            android:textColor="@color/white" />

        <EditText
            android:id="@+id/input_second"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="end"
            android:inputType="number"
            android:text="0"
            android:textColor="@color/white"
            tools:ignore="Autofill" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s"
            android:textColor="@color/white" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>