<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center">

    <LinearLayout
        android:id="@+id/todo_is_pinned_wrapper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/todo_is_pinned"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:background="@drawable/ic_office_push_pin"
            android:backgroundTint="@color/white"
            android:layout_margin="18dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/todo_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginVertical="18dp">

        <TextView
            android:id="@+id/todo_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_name"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/todo_info_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/item_description_here"
            android:textColor="@color/white" />
    </LinearLayout>

    <TextView
        android:id="@+id/todo_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30m"
        android:textColor="@color/white" />


    <LinearLayout
        android:id="@+id/todo_done"
        android:visibility="invisible"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:background="@drawable/ic_checked"
            android:backgroundTint="#00C853"
            android:layout_marginVertical="18dp"
            android:layout_marginHorizontal="24dp"
            tools:ignore="ContentDescription" />
    </LinearLayout>

</LinearLayout>